# citekit.py

./: .gitignore  .replit  LICENSE.txt  README.md  out.txt  pyproject.toml  setup.py  sites.txt
citecat/: __init__.py  __main__.py  citation.py  fetch.py  formatter.py
citeeasy/: __main__.py  citation.py  fetch.py  main.py
citekit/: __init__.py  __main__.py  citation.py  fetch.py  formatter.py
