[tool.poetry]
name = "citekit"
version = "0.1.0"
description = "Python library to cite websites, similar to citethisforme.com"
authors = ["Hedy Li <hedyhyry@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.1"
dateparser = "^0.7.6"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.6.0"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
